# MatheAtlas

./: Cargo.toml  agents.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js
.cargo/: config.toml
.continue/agents/: first_agent.yaml
src/: App.tsx  globals.css  main.rs  main.tsx  typen.rs
src/Atlas/: Anschlüsse.types.ts  Karten.types.ts  Knoten.types.ts
src/Atlas/Anschlüsse/: AnschlussLeiste.tsx  DatenAnschluss.tsx  MultiAnschlussLeiste.tsx  methoden.ts
src/Atlas/Karten/: InstanzierbareKnotenDialog.tsx  Karte.tsx  KartenVorlage.ts  KontextMenüKomponenten.tsx  KontextMenüs.tsx  Pfad.tsx  methoden.tsx
src/Atlas/Knoten/: AuswertungsKnoten.tsx  BasisKnoten.tsx  ElementKnoten.tsx  KartenKnoten.tsx  Knoten.tsx  LaTeXKnoten.tsx  LogikKnoten.tsx  LogikTabelleKnoten.tsx  ParameterKnoten.tsx  RechenKnoten.tsx  SchnittstellenKnoten.tsx  VariableKnoten.tsx  methoden.tsx
src/Atlas/KontextMenü/: EdgeKontext.tsx  NodeKontext.tsx  PaneKontext.tsx  SelektKontext.tsx  methoden.tsx
src/Daten/Formeln/: LaTeX.ts  logik.ts  mengen.ts  parameter.ts  (+2 more)
src/Karten/: basis-karte.rs  definitions-karte.rs  style.rs
src/Knoten/: basis-knoten.rs  latex-knoten.rs  operator-knoten.rs  relation-knoten.rs
src/Kontext/: karte.rs  verbindung.rs
src/LaTeX/: interpreter.rs  logik.rs  menge.rs  mod.rs  vorlagen.rs
src/Ordnung/: DialogManager.tsx  KartenAtlas.tsx  KnotenAtlas.tsx  SchnittstelleDialog.tsx  SchnittstellenListe.tsx  Struktur.tsx  atlas.types.ts  datenbank.types.ts  dialoge.types.ts  programm.types.ts
tools/: mathjax_tex2svg.mjs
(+63 files in other folders)
