[package]
name = "mathe-atlas"
version = "0.0.2"
edition = "2024"
publish = false

[[bin]]
name = "mathe-atlas"
path = "src/main.rs"

[dependencies]
eframe = "0.33.3"
tectonic = { version = "0.15.0", features = ["external-harfbuzz"] }
typst = "0.14.2"
typst-assets = "0.14.2"
resvg = "0.45.1"
usvg = "0.45.1"
tiny-skia = "0.11.4"
egui-probe = "0.10.0"
egui_extras = "0.33.3"
egui-snarl = { version = "0.9.0", features = ["egui-probe", "serde"] }
syn = { version = "2", features = ["extra-traits"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
mathjax = "0.1.1"
symbolica = "1.1.0"
